--- a/src/main/resources/templates/ex/ex01.html
+++ b/src/main/resources/templates/ex/ex01.html
@@ -5,6 +5,18 @@
     <title>Title</title>
 </head>
 <body>
-    <p th:text="${data}">test</p>
+    <h1>상품</h1>
+    <div>
+        상품명 : <span th:text="${itemDto.itemNm}"></span>
+    </div>
+    <div>
+        상품상세설명 : <span th:text="${itemDto.itemDetail}"></span>
+    </div>
+    <div>
+        상품등록일 : <span th:text="${itemDto.regTime}"></span>
+    </div>
+    <div>
+        상품가격 : <span th:text="${itemDto.price}"></span>
+    </div>
 </body>
 </html>
